readme and docs yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: oplog
-site_url: https://google.com
+site_url: https://oribarilan.github.io/oplog/
 repo_url: https://github.com/oribarilan/oplog
 repo_name: oribarilan/oplog
 
