pr & master build as well as publish build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
-name: Package Build
+name: Reuseable Build
 
 on:
   workflow_call
 
 jobs:
-  build:
+  reuseable_build:
 
     runs-on: ubuntu-latest
     # strategy:
