--- a/.github/workflows/package_publish.yml
+++ b/.github/workflows/package_publish.yml
@@ -1,6 +1,18 @@
+name: PR & Master Build
+
+on: [push, pull_request]
+
+
+
 # This workflow will upload a Python Package using Twine when a release is created
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
-name: Publish Python Package
+
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+
+name: Upload Python Package
 
 on:
   release:
@@ -9,12 +21,24 @@ on:
 permissions:
   contents: read
 
+core_build:
+  uses: ./.github/workflows/core_build.yml
+
 jobs:
-
-  build:
-    uses: ./.github/workflows/build.yml
-
   deploy:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.x'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install build
     - name: Build package
       run: python -m build
     - name: Publish package
