package_publish fix

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,9 +1,12 @@
 name: Build and Deploy Docs 
 on:
-  push:
-    branches:
-      - master 
-      - main
+  release:
+    types: [published]
+# on:
+#   push:
+#     branches:
+#       - master 
+#       - main
 permissions:
   contents: write
 jobs:
