--- a/.github/workflows/package_publish.yml
+++ b/.github/workflows/package_publish.yml
@@ -2,9 +2,10 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
 name: Upload Python Package
 
-on:
-  release:
-    types: [published]
+on: [push, pull_request]
+# on:
+#   release:
+#     types: [published]
 
 permissions:
   contents: read
