--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = oplog
+name = op-log
 version = 0.1
 author = Ori Bar-ilan
 description = Modern logging library for Python applications, focused on object-oriented, production-ready logging.
