--- a/.github/workflows/security_check.yml
+++ b/.github/workflows/security_check.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     name: PyCharm Python Security Scanner
     steps:
+        - uses: actions/checkout@v3
         - uses: tonybaloney/pycharm-security@1.25.1
 
                 
