--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,43 +1,49 @@
-name: Coverage with pytest
+name: pytester-cov workflow
 
 on: [push, pull_request]
 
 jobs:
-    build:
-  
-      runs-on: ubuntu-latest
-      env:
-        COVERAGE_SINGLE: 90
-        COVERAGE_TOTAL: 90
-  
-      steps:
-      - uses: actions/checkout@main
-      - name: Set up Python 3.11
-        uses: actions/setup-python@main
-        with:
-          python-version: 3.11
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-  
-      - name: pytester-cov
-        id: pytester-cov
-        uses: programmingwithalex/pytester-cov@main
-        with:
-            #   cov-omit-list: 'test/*, temp/main3.py, temp/main4.py'
-          cov-threshold-single: ${{ env.COVERAGE_SINGLE }}
-          cov-threshold-total: ${{ env.COVERAGE_TOTAL }}
-    
-      - name: Coverage single fail - exit
-        if: ${{ steps.pytester-cov.outputs.cov-threshold-single-fail == 'true' }}
-        run: |
-            echo "cov single fail ${{ steps.pytester-cov.outputs.cov-threshold-single-fail }}"
-            exit 1
-            
-      - name: Coverage total fail - exit
-        if: ${{ steps.pytester-cov.outputs.cov-threshold-total-fail == 'true' }}
-        run: |
-            echo "cov single fail ${{ steps.pytester-cov.outputs.cov-threshold-total-fail }}"
-            exit 1
+  build:
+
+    runs-on: ubuntu-latest
+    env:
+      COVERAGE_SINGLE: 60
+      COVERAGE_TOTAL: 60
+
+    steps:
+    - uses: actions/checkout@main
+    - name: Set up Python 3.11
+      uses: actions/setup-python@main
+      with:
+        python-version: 3.11
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+    - name: pytester-cov
+      id: pytester-cov
+      uses: programmingwithalex/pytester-cov@main
+      with:
+        pytest-root-dir: '.'
+        cov-omit-list: 'test/*, temp/main3.py, temp/main4.py'
+        cov-threshold-single: ${{ env.COVERAGE_SINGLE }}
+        cov-threshold-total: ${{ env.COVERAGE_TOTAL }}
+
+    - name: Coverage single fail - exit
+      if: ${{ steps.pytester-cov.outputs.cov-threshold-single-fail == 'true' }}
+      run: |
+        echo "cov single fail ${{ steps.pytester-cov.outputs.cov-threshold-single-fail }}"
+        exit 1
+
+    - name: Coverage total fail - exit
+      if: ${{ steps.pytester-cov.outputs.cov-threshold-total-fail == 'true' }}
+      run: |
+        echo "cov single fail ${{ steps.pytester-cov.outputs.cov-threshold-total-fail }}"
+        exit 1
+
+    - name: Commit pytest coverage table
+      uses: peter-evans/commit-comment@main
+      with:
+        body: ${{ steps.pytester-cov.outputs.output-table }}
