--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,6 +1,9 @@
 name: Code Coverage Check
 
-on: [push, pull_request]
+on: [pull_request]
+
+env:
+  COVERAGE_THRESHOLD: 95
 
 jobs:
   coverage-check:
@@ -13,7 +16,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.11
+          python-version: 3.11  # Replace with your desired Python version
 
       - name: Install dependencies
         run: |
@@ -22,16 +25,26 @@ jobs:
       - name: Run coverage report
         run: |
           coverage run --omit 'oplog/tests/*','*/__pycache__/*' -m pytest
-          coverage report -m --fail-under=90
+          coverage xml -o coverage.xml
+          coverage report -m --fail-under=$COVERAGE_THRESHOLD
 
       - name: Upload coverage report
-        uses: actions/upload-artifact@v2
-        with:
-          name: coverage-report
-          path: ./coverage.xml
+        if: success()  # Only upload the report if previous steps were successful
+        run: |
+          if [ -f coverage.xml ]; then
+            echo "Uploading coverage report"
+          else
+            echo "Coverage report not found, failing the workflow"
+            exit 1
+          fi
+        shell: bash
 
       - name: Fail if coverage is below threshold
         run: |
           if [ -f coverage.xml ]; then
-            python -c "import xml.etree.ElementTree as ET; tree = ET.parse('coverage.xml'); root = tree.getroot(); lines = root.find('totals').find('lines').get('percent'); exit(1) if float(lines) < X else exit(0);" || true
+            python -c "import xml.etree.ElementTree as ET; tree = ET.parse('coverage.xml'); root = tree.getroot(); lines = root.find('totals').find('lines').get('percent'); exit(1) if float(lines) < $COVERAGE_THRESHOLD else exit(0);" || true
+          else
+            echo "Coverage report not found, failing the workflow"
+            exit 1
           fi
+        shell: bash
