--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -41,29 +41,8 @@ jobs:
       - name: Check coverage per file
         run: |
           if [ -f coverage.xml ]; then
-            python -c "
-            import xml.etree.ElementTree as ET
-
-            tree = ET.parse('coverage.xml')
-            root = tree.getroot()
-
-            failed_files = []
-
-            for class_element in root.findall('.//class[@filename]'):
-                filename = class_element.get('filename')
-                lines = float(class_element.find('lines').get('percent'))
-                if lines < $SINGLE_COVERAGE_THRESHOLD:  # Individual threshold per file (adjust as needed)
-                    failed_files.append((filename, lines))
-
-            if failed_files:
-                print('The following files have coverage below the threshold:')
-                for filename, lines in failed_files:
-                    print(f'- {filename}: {lines}%')
-                exit(1)
-            " || true
+              python scripts/single_file_coverage_check.py || true
           else
-            echo "Coverage report not found, failing the workflow"
-            exit 1
+              echo "Coverage report not found, failing the workflow"
+              exit 1
           fi
-        shell: bash
-        
