--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "op-log"
 version = "0.18.0"
-description = "Modern logging library for Python applications, focused on object-oriented, production-ready logging."
+description = "Easy-to-use context-rich Python logging library."
 readme = "README.md"
 authors = [{ name = "Ori Bar-ilan", email = "python.oplog@gmail.com" }]
 license = { file = "LICENSE" }
