--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,9 +80,14 @@ nav:
     - index.md
     - Tutorial:
         - Getting Started: tutorial/getting_started.md
-        - Operation Properties: tutorial/operation_properties.md
+        - Operation: tutorial/operation.md
+        - Operated: tutorial/operated.md
+        - Property Groups: tutorial/property_groups.md
         - Progressable Operations: tutorial/progressable_operations.md
-        - Examples: tutorial/examples.md
+    - Demos:
+        - Fluent Calculator (Logic w/ CSV Telemetry): demos/fluent_calculator.md
+        - TBD (Web API w/ Verbose Textual Logs): demos/tbd.md
+        - Find Nth Prime (CLI Tool w/ Progress Bars): demos/find_nth_prime.md
     - Contribution:
         - Contribution: contribution/contribution.md
         - Development: contribution/development.md
