--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,7 +83,10 @@ nav:
         - Operation: tutorial/operation.md
         - Operated: tutorial/operated.md
         - Property Groups: tutorial/property_groups.md
-        - Progressable Operations: tutorial/progressable_operations.md
+        - Progressable: tutorial/progressable.md
+        - Config: tutorial/config.md
+        - Advanced:
+            - Serialization: tutorial/advanced/serialization.md
     - Demos:
         - Fluent Calculator (Logic w/ CSV Telemetry): demos/fluent_calculator.md
         - TBD (Web API w/ Verbose Textual Logs): demos/tbd.md
